--- a/app/views/heros/_form.html.erb
+++ b/app/views/heros/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div>
     <%= form.label :race_id, style: "display: block" %>
-    <%= form.text_field :race_id %>
+    <%= form.collection_select :race_id, Race.all, :id, :name, style: "display: block" %>
   </div>
 
   <div>
