--- a/app/views/heros/show.html.erb
+++ b/app/views/heros/show.html.erb
@@ -2,9 +2,10 @@
 
 <%= render @hero %>
 
-<div>
-  <%= link_to "Edit this hero", edit_hero_path(@hero) %> |
-  <%= link_to "Back to heros", heros_path %>
+<br/>
+
+<div style="display: flex; margin: 1rem 0;">
+  <%= link_to "Edit this hero", edit_hero_path(@hero), class: "button", style: "margin-right: 2rem"%>
 
   <%= button_to "Destroy this hero", @hero, method: :delete %>
 </div>
