--- a/app/views/heros/index.html.erb
+++ b/app/views/heros/index.html.erb
@@ -1,7 +1,6 @@
-<p style="color: green"><%= notice %></p>
-
 <h1>Heros</h1>
-<%= link_to "New hero", new_hero_path %>
+<%= link_to "New hero", new_hero_path, class: "button" %>
+<br/>
 <table id="heros">
   <thead>
     <tr>
