Add new stats to dashboard

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,9 @@ header, footer{
     .sidebar{
         padding-left: 1rem;
         padding-top: 1rem;
+        div{
+            margin-bottom: 1rem;
+        }
     }
 }
 
