Fix quests page display

--- a/app/views/quests/_quest.html.erb
+++ b/app/views/quests/_quest.html.erb
@@ -23,4 +23,8 @@
     <strong>Min level:</strong>
     <%= quest.min_level %>
   </p>
+  <p>
+    <strong>Status:</strong>
+    <%= quest.status.name %>
+  </p>
 </div>
